Fixed errors, the code has been optimized, now you do not need to add additional CSS code, GAPS functioning now works correctly, and their attributes are not required to operate the code, updated README and example files

--- a/example/src/style.css
+++ b/example/src/style.css
@@ -18,8 +18,6 @@ main {
 aside {
   float: right;
   width: 30%;
-  position: sticky;
-  top: 0px;
   background: #777;
 }
 li {
@@ -31,4 +29,4 @@ footer {
   background: #555;
   position: relative;
   bottom: 0;
-}
+} 
